2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Bob Paddock:
	patch #6891: Add XMega software reset to the FAQ section on software
	reset
	* doc/api/faq.dox (faq_softreset): Mention the Xmega RST.CTRL method.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Ruwan Jayanetti:
	patch #6194: Twitest updated to handle larger EEPROM devices
	* doc/examples/twitest/twitest.c: Implement the
	WORD_ADDRESS_16BIT option.
	* doc/examples/twitest/twitest.dox: Document the new option.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Gerben van den Broeke:
	patch #6555: malloc improvement
	* libc/stdlib/malloc.c (malloc): Speed up reallocations.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Krzysztof Kosciuszkiewicz:
	patch #6690: Shorten calculation of dallas 1-wire crc
	* include/util/crc16.h (_crc_ibutton_update): no need to
	use the T flag bit to save bit 0 of the operand

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Tero Sinervo:
	patch #6791: Minor fixes to stdio.h documentation
	* include/stdio.h: Fix spelling mistakes.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Heike C. Zimmerer:
	patch #6897: Allow <util/setbaud.h> to be used with assembler source
	* include/util/setbaud.h: Add assembler snippets (no UL suffix
	added to numbers)

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add test scripts for <util/crc16.h>
	* tests/simulate/util/crc16-1.c: New file.
	* tests/simulate/util/crc16-2.c: (Ditto.)
	* tests/simulate/util/crc16-3.c: (Ditto.)
	* tests/simulate/util/crc16-4.c: (Ditto.)

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Don Kinzer:
	bug #29950: ATtiny167 SPM_PAGESIZE Discrepancy
	* include/avr/iotn167.h: Bump SPM_PAGESIZE.

2010-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #27235, malloc: Several things go wrong
	* libc/stdlib/malloc.c (malloc): Revert the patch
	from r2123, as it is no longer needed.