@@ -562,6 +562,7 @@ INPUT                  = @top_srcdir@/include/alloca.h \
                          @top_srcdir@/include/string.h \
                          @top_srcdir@/libc \
                          @top_srcdir@/include/avr/boot.h \
+                         @top_srcdir@/include/avr/cpufunc.h \
                          @top_srcdir@/include/avr/eeprom.h \
                          @top_srcdir@/include/avr/fuse.h \
                          @top_srcdir@/include/avr/interrupt.h \
